kubernetes/forecast-deployment-old.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forecast-server-old
  labels:
    app: forecast-server-old
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: forecast-server-old
        serving: "true"
        version: "1.0"
    spec:
      containers:
      - name: forecast-server-old
        image: sbishyr/forecast-istio:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
