kubernetes/forecast-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: forecast-server
  labels:
    app: forecast-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: forecast-server
        serving: "true"
    spec:
      containers:
      - name: location-server
        image: sbishyr/forecast-istio
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
