kubernetes/icons-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: icons-server
  labels:
    app: icons-server
    version: "1.0"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: icons-server
        version: "1.0"
        serving: "true"
    spec:
      containers:
      - name: icons-server
        image: sbishyr/icons-istio:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
          name: http
