kubernetes/location-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: location-server
  labels:
    app: location-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: location-server
        serving: "true"
    spec:
      containers:
      - name: location-server
        image: sbishyr/istio-location-istio
        ports:
        - containerPort: 8080
          name: http
