kubernetes/lunar-phase-deployment-v1.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lunar-phase-server-v1
  labels:
    app: lunar-phase-server
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weather-server
        version: "1.0"
        serving: "true"
    spec:
      containers:
      - name: weather-server
        image: sbishyr/lunar-phase-istio
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
          name: http
