kubernetes/weather-deployment-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weather-server-v2
  labels:
    app: weather-server
    version: "2.0"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: weather-server
        version: "2.0"
        serving: "true"
    spec:
      containers:
      - name: weather-server
        image: sbishyr/weather-istio:2.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: http
