kubernetes/forecast-svc-old.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-server-old
  labels:
    app: forecast-server-old
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: forecast-server-old
    serving: "true"
    version: "1.0"
