kubernetes/forecast-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecast-server
  labels:
    app: forecast-server
spec:
#  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: forecast-server
    serving: "true"
