kubernetes/icons-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: icons-server
  labels:
    app: icons-server
spec:
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: icons-server
    serving: "true"
