kubernetes/location-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: location-server
  labels:
    app: location-server
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: location-server
    serving: "true"
