kubernetes/lunar-phase-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lunar-phase-server
  labels:
    app: lunar-phase-server
spec:
#  type: NodePort
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: lunar-phase-server
    serving: "true"
