kubernetes/weather-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-server
  labels:
    app: weather-server
spec:
  type: NodePort
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: weather-server
    serving: "true"
