kubernetes/forecast-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: forecast-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: forecast-server
spec:
  hosts:
  - "*"
  gateways:
  - forecast-gateway
  http:
  - match:
    - uri:
        prefix: /forecast
    - uri:
        prefix: /weather
    - uri:
        prefix: /phase
    route:
    - destination:
        host: forecast-server
        port:
          number: 8080
