kubernetes/location-weather-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: location-weather-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:

  - host: locations.istio.com
    http:
      paths:
      - backend:
          serviceName: location-server
          servicePort: 8080

  - host: weather.istio.com
    http:
      paths:
      - backend:
          serviceName: weather-server
          servicePort: 8081

  - host: lunar-phase.istio.com
    http:
      paths:
      - backend:
          serviceName: lunar-phase-server
          servicePort: 8082
